<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/txtLang"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/midnight_blue" />

    <TextView
        android:id="@+id/cellTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cell_title" />

    <TextView
        android:id="@+id/cellYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cell_year" />

    <TextView
        android:id="@+id/cellID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cell_ID" />

    <TextView
        android:id="@+id/cellType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cell_type" />

</LinearLayout>